    *                                  *
    *  ~  means something has changed  *
    *  +  means a new addition         *
    *  -  means removal of something   *
    *  *  means a general bullet-point *
    *                                  *
    ************************************


23rd November 2024 - 0.26.0-alpha1
==================================

 * added terse forms of macros, available by including **xtests/terse-api.h**;
 * `XTESTS_COMMANDLINE_PARSE_VERBOSITY()` now also recognises, if the command-line argument `"--verbosity= . . ."` is not found, the enviroment variables `"XTESTS_VERBOSITY"` and `"TEST_VERBOSITY"`;
 * updated **STLSoft** constructs, incl. macros;
 * minor improvements to project boilerplate files;


18th November 2024 - 0.25.4
===========================

 * added CMake MSVC MT support;


25th October 2024 - 0.25.3
==========================

 * Fix to colour output at high verbosity levels;


22nd October 2024 - 0.25.2
==========================

 * Added and applied CMake functions for examples and test programs;
 * Some refactoring in main header **include/xtests/xtests.h**;
 * VC++ 19+ warnings;
 * Fixed vulnerability in length-limited string comparisons;
 * Renamed project **test.scratch.string_slices.c** => **test.unit.string_slices.c**;


20th October 2024 - 0.25.0
==========================

NO CHANGES


18th October 2024 - 0.24.0-alpha7
=================================

Summary:
--------

 * Coloured output now bold;
 * Minor fixes to CMake build scripts;


17th October 2024 - 0.24.0-alpha6
=================================

Summary:
--------

 * Expanded shwild integration (including CMake detection);
 * Significant enhancement and refactoring around use of CMake;
 * Added coloured output for test-case / runner names;
 * General tidying;
 * Compatibility with legacy versions of Visual C++;

Changes:
--------

Expanded shwild integration (including CMake detection):
 * detects **shwild** in CMakeLists.txt;