@@ -19,10 +19,12 @@ Updated: 23rd November 2024
 23rd November 2024 - 0.26.0-alpha1
 ==================================
 
+ * now uses `stlsoft::integral_traits<>` for integer test macros (in C++) to allow for custom integral types to be tested;
  * added terse forms of macros, available by including **xtests/terse-api.h**;
  * `XTESTS_COMMANDLINE_PARSE_VERBOSITY()` now also recognises, if the command-line argument `"--verbosity= . . ."` is not found, the enviroment variables `"XTESTS_VERBOSITY"` and `"TEST_VERBOSITY"`;
- * updated **STLSoft** constructs, incl. macros;
  * minor improvements to project boilerplate files;
+ * minor tidying to CMake facilities;
+ * updated **STLSoft** constructs, incl. macros;
 
 
 18th November 2024 - 0.25.4
